[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/message.png" type="Texture" id=2]
[ext_resource path="res://fonts/flappy_score_font.tres" type="DynamicFont" id=3]

[node name="menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="start_game_ctrl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="start_message" type="TextureRect" parent="start_game_ctrl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -273.0
margin_right = 138.0
margin_bottom = 127.0
texture = ExtResource( 2 )

[node name="game_over_ctrl" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="game_over_ctrl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.5
margin_top = -80.5
margin_right = 100.5
margin_bottom = 80.5
custom_constants/separation = 20

[node name="score_label" type="Label" parent="game_over_ctrl/VBoxContainer"]
margin_right = 201.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 3
custom_constants/shadow_as_outline = 1
text = "Score: 0"
align = 1

[node name="best_score_label" type="Label" parent="game_over_ctrl/VBoxContainer"]
margin_top = 69.0
margin_right = 201.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 3
custom_constants/shadow_as_outline = 1
text = "Best: 0"
align = 1

[node name="restart_button" type="Button" parent="game_over_ctrl/VBoxContainer"]
margin_top = 138.0
margin_right = 201.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "Restart"

[node name="tween" type="Tween" parent="."]

[connection signal="pressed" from="game_over_ctrl/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
